Integrated Clerk Successfully and Created Two Users

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,11 @@
 !.yarn/releases
 !.yarn/versions
 
+# Environment variables
+/config.env
+/config.env.local
+/.env.local
+
 # testing
 /coverage
 
@@ -39,3 +44,6 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# clerk configuration (can include secrets)
+/.clerk/
