--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^6.12.4",
     "lucide-react": "^0.483.0",
+    "mongoose": "^8.13.2",
     "next": "15.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
